WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40110
[Qt] QScriptValue::equals problems
https://bugs.webkit.org/show_bug.cgi?id=40110
Summary
[Qt] QScriptValue::equals problems
Jędrzej Nowacki
Reported
2010-06-03 03:23:56 PDT
There are a few edge cases for which the method returns a bad result; !. Comparison of a two NaN 2. Comparison of a two invalid QScriptValue objects will return false instead of true 3. Sometimes QScriptValue::equals print warnings about an invalid engine assignment, but these message are false positive.
Attachments
Fix v1
(78.02 KB, patch)
2010-06-03 04:48 PDT
,
Jędrzej Nowacki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jędrzej Nowacki
Comment 1
2010-06-03 04:48:10 PDT
Created
attachment 57753
[details]
Fix v1
Kenneth Rohde Christiansen
Comment 2
2010-06-03 05:11:54 PDT
Comment on
attachment 57753
[details]
Fix v1 Wonderful tests. JavaScriptCore/qt/tests/qscriptvalue/tst_qscriptvalue_generated_comparison.cpp:1124 + equals.reserve(1085); Could this number be calculated?
Jędrzej Nowacki
Comment 3
2010-06-03 05:54:48 PDT
(In reply to
comment #2
)
> (From update of
attachment 57753
[details]
) > Wonderful tests. > JavaScriptCore/qt/tests/qscriptvalue/tst_qscriptvalue_generated_comparison.cpp:1124 > + equals.reserve(1085); > Could this number be calculated?
Not really, only the maximal size could be calculated which is permutation of all values in the test. It would be huge. Thanks for review!
WebKit Commit Bot
Comment 4
2010-06-04 00:54:32 PDT
Comment on
attachment 57753
[details]
Fix v1 Clearing flags on attachment: 57753 Committed
r60661
: <
http://trac.webkit.org/changeset/60661
>
WebKit Commit Bot
Comment 5
2010-06-04 00:54:37 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug