JavaScriptCore/qt/tests/qscriptvalue/tst_qscriptvalue.h
@@ -103,6 +103,9 @@ private slots:
     void toUInt16_data();
     void toUInt16();
 
+    void equals_data();
+    void equals();
+
     void strictlyEquals_data();
     void strictlyEquals();
 
@@ -186,6 +189,10 @@ private:
     void toUInt16_initData();
     void toUInt16_makeData(const char*);
     void toUInt16_test(const char*, const QScriptValue&);
+
+    void equals_initData();
+    void equals_makeData(const char*);
+    void equals_test(const char*, const QScriptValue&);
 
     void strictlyEquals_initData();
     void strictlyEquals_makeData(const char*);
